--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ ninja==1.10.2
 pip==22.0.3
 pytest==7.0.1
 setuptools==60.9.3
-shellcheck-py=0.8.0
+shellcheck-py==0.8.0.4
 types-setuptools==57.4.9
 wheel==0.37.1
 expecttest==0.1.3
