Add `baseurl` to Jekyll config

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,7 @@
 url: "http://pytorch.org/torchdistx"
 name: Torch Distributed Experimental
 latest_version: 1.0
+baseurl: ""
 relative_permalinks: false
 timezone: America/Los_Angeles
 sass:
