--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -14,7 +14,7 @@ on:
       - 'docker/**'
       - 'docs/**'
       - '**.md'
-  pull_request_target:
+  pull_request:
     paths-ignore:
       - 'docker/**'
       - 'docs/**'
