--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -33,8 +33,8 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
-          build_variant: ['cpu', 'cu102', 'cu113'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
+          build_variant: ['cpu', 'cu102', 'cu113', 'cu116'],
           sanitizer: ['nosan'],
           include: [
             {
@@ -58,8 +58,8 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
-          build_variant: ['cpu', 'cu102', 'cu113'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
+          build_variant: ['cpu', 'cu102', 'cu113', 'cu116'],
           sanitizer: ['nosan'],
           include: [
             {
@@ -83,7 +83,7 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
           build_variant: ['cpu'],
           sanitizer: ['nosan'],
           include: [
@@ -107,7 +107,7 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
           build_variant: ['cu102'],
           sanitizer: ['nosan']
         }
@@ -119,8 +119,20 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
           build_variant: ['cu113'],
+          sanitizer: ['nosan']
+        }
+
+  test_wheel_cu116:
+    name: Test (CUDA 11.6)
+    needs: test_wheel_cu113
+    uses: ./.github/workflows/_test_wheel.yaml
+    with:
+      matrix: |
+        {
+          py: ['3.7', '3.8', '3.9', '3.10'],
+          build_variant: ['cu116'],
           sanitizer: ['nosan']
         }
 
@@ -131,7 +143,7 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
           build_variant: ['cpu'],
           sanitizer: ['nosan'],
           include: [
@@ -155,7 +167,7 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
           build_variant: ['cu102'],
           sanitizer: ['nosan']
         }
@@ -167,21 +179,33 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
           build_variant: ['cu113'],
+          sanitizer: ['nosan']
+        }
+
+  test_conda_cu116:
+    name: Test (CUDA 11.6)
+    needs: test_conda_cu113
+    uses: ./.github/workflows/_test_conda.yaml
+    with:
+      matrix: |
+        {
+          py: ['3.7', '3.8', '3.9', '3.10'],
+          build_variant: ['cu116'],
           sanitizer: ['nosan']
         }
 
   deploy:
     name: Deploy
     if: github.event_name == 'schedule' || github.event.inputs.deploy == 'true'
-    needs: [build_doc, test_wheel_cu113, test_conda_cu113]
+    needs: [build_doc, test_wheel_cu116, test_conda_cu116]
     uses: ./.github/workflows/_deploy.yaml
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9'],
-          build_variant: ['cpu', 'cu102', 'cu113'],
+          py: ['3.7', '3.8', '3.9', '3.10'],
+          build_variant: ['cpu', 'cu102', 'cu113', 'cu116'],
         }
       s3_wheel_path: pytorch/whl/nightly
       doc_folder_override: nightly
