--- a/docker/ci-conda/Dockerfile.cu116
+++ b/docker/ci-conda/Dockerfile.cu116
@@ -4,4 +4,8 @@
 # This source code is licensed under the BSD-style license found in the
 # LICENSE file in the root directory of this source tree.
 
-__version__ = "0.2.0"
+FROM ghcr.io/pytorch/torchdistx-ci-conda:1-cpu
+
+COPY install-cuda-11.6 /root/
+
+RUN /root/install-cuda-11.6
