--- a/.github/workflows/_test_conda.yaml
+++ b/.github/workflows/_test_conda.yaml
@@ -40,7 +40,7 @@ jobs:
           conda create --yes\
                        --name test\
                        --channel ~/conda-build\
-                       --channel pytorch-nightly\
+                       --channel pytorch\
                        --channel conda-forge\
                        numpy\
                        pytest==7.0.1\
