--- a/packaging/conda/meta.yaml
+++ b/packaging/conda/meta.yaml
@@ -4,7 +4,7 @@
 # This source code is licensed under the BSD-style license found in the
 # LICENSE file in the root directory of this source tree.
 
-{% set version = "0.2.0" %}
+{% set version = "0.3.0.dev0" %}
 
 {% set build_number = 0 %}
 
