--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -42,11 +42,11 @@ jobs:
               build_variant: 'cpu',
               sanitizer: 'asan_ubsan'
             },
-            {
-              py: '3.7',
-              build_variant: 'cpu',
-              sanitizer: 'tsan'
-            },
+#            {
+#              py: '3.7',
+#              build_variant: 'cpu',
+#              sanitizer: 'tsan'
+#            },
           ]
         }
       dev_stamp: true
@@ -67,11 +67,11 @@ jobs:
               build_variant: 'cpu',
               sanitizer: 'asan_ubsan'
             },
-            {
-              py: '3.7',
-              build_variant: 'cpu',
-              sanitizer: 'tsan'
-            },
+#            {
+#              py: '3.7',
+#              build_variant: 'cpu',
+#              sanitizer: 'tsan'
+#            },
           ]
         }
       dev_stamp: true
@@ -92,11 +92,11 @@ jobs:
               build_variant: 'cpu',
               sanitizer: 'asan_ubsan'
             },
-            {
-              py: '3.7',
-              build_variant: 'cpu',
-              sanitizer: 'tsan'
-            },
+#            {
+#              py: '3.7',
+#              build_variant: 'cpu',
+#              sanitizer: 'tsan'
+#            },
           ]
         }
 
@@ -152,11 +152,11 @@ jobs:
               build_variant: 'cpu',
               sanitizer: 'asan_ubsan'
             },
-            {
-              py: '3.7',
-              build_variant: 'cpu',
-              sanitizer: 'tsan'
-            },
+#            {
+#              py: '3.7',
+#              build_variant: 'cpu',
+#              sanitizer: 'tsan'
+#            },
           ]
         }
 
