--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,12 +30,12 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cpu', 'cu102', 'cu113', 'cu116'],
+          py: ['3.8', '3.9', '3.10'],
+          build_variant: ['cpu', 'cu117', 'cu118'],
           sanitizer: ['nosan'],
           include: [
             {
-              py: '3.7',
+              py: '3.8',
               build_variant: 'cpu',
               sanitizer: 'asan_ubsan'
             }
@@ -49,12 +49,12 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cpu', 'cu102', 'cu113', 'cu116'],
+          py: ['3.8', '3.9', '3.10'],
+          build_variant: ['cpu', 'cu117', 'cu118'],
           sanitizer: ['nosan'],
           include: [
             {
-              py: '3.7',
+              py: '3.8',
               build_variant: 'cpu',
               sanitizer: 'asan_ubsan'
             }
@@ -68,51 +68,39 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
+          py: ['3.8', '3.9', '3.10'],
           build_variant: ['cpu'],
           sanitizer: ['nosan'],
           include: [
             {
-              py: '3.7',
+              py: '3.8',
               build_variant: 'cpu',
               sanitizer: 'asan_ubsan'
             }
           ]
         }
 
-  test_wheel_cu102:
-    name: Test (CUDA 10.2)
+  test_wheel_cu117:
+    name: Test (CUDA 11.7)
     needs: test_wheel_cpu
     uses: ./.github/workflows/_test_wheel.yaml
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cu102'],
+          py: ['3.8', '3.9', '3.10'],
+          build_variant: ['cu117'],
           sanitizer: ['nosan']
         }
 
-  test_wheel_cu113:
-    name: Test (CUDA 11.3)
-    needs: test_wheel_cu102
+  test_wheel_cu118:
+    name: Test (CUDA 11.8)
+    needs: test_wheel_cu117
     uses: ./.github/workflows/_test_wheel.yaml
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cu113'],
-          sanitizer: ['nosan']
-        }
-
-  test_wheel_cu116:
-    name: Test (CUDA 11.6)
-    needs: test_wheel_cu113
-    uses: ./.github/workflows/_test_wheel.yaml
-    with:
-      matrix: |
-        {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cu116'],
+          py: ['3.8', '3.9', '3.10'],
+          build_variant: ['cu118'],
           sanitizer: ['nosan']
         }
 
@@ -123,64 +111,52 @@ jobs:
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
+          py: ['3.8', '3.9', '3.10'],
           build_variant: ['cpu'],
           sanitizer: ['nosan'],
           include: [
             {
-              py: '3.7',
+              py: '3.8',
               build_variant: 'cpu',
               sanitizer: 'asan_ubsan'
             }
           ]
         }
 
-  test_conda_cu102:
-    name: Test (CUDA 10.2)
+  test_conda_cu117:
+    name: Test (CUDA 11.7)
     needs: test_conda_cpu
     uses: ./.github/workflows/_test_conda.yaml
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cu102'],
+          py: ['3.8', '3.9', '3.10'],
+          build_variant: ['cu117'],
           sanitizer: ['nosan']
         }
 
-  test_conda_cu113:
-    name: Test (CUDA 11.3)
-    needs: test_conda_cu102
+  test_conda_cu118:
+    name: Test (CUDA 11.8)
+    needs: test_conda_cu117
     uses: ./.github/workflows/_test_conda.yaml
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cu113'],
-          sanitizer: ['nosan']
-        }
-
-  test_conda_cu116:
-    name: Test (CUDA 11.6)
-    needs: test_conda_cu113
-    uses: ./.github/workflows/_test_conda.yaml
-    with:
-      matrix: |
-        {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cu116'],
+          py: ['3.8', '3.9', '3.10'],
+          build_variant: ['cu118'],
           sanitizer: ['nosan']
         }
 
   deploy:
     name: Deploy
     if: github.event.inputs.deploy == 'true'
-    needs: [build_doc, test_wheel_cu116, test_conda_cu116]
+    needs: [build_doc, test_wheel_cu118, test_conda_cu118]
     uses: ./.github/workflows/_deploy.yaml
     with:
       matrix: |
         {
-          py: ['3.7', '3.8', '3.9', '3.10'],
-          build_variant: ['cpu', 'cu102', 'cu113', 'cu116'],
+          py: ['3.8', '3.9', '3.10'],
+          build_variant: ['cpu', 'cu117', 'cu118'],
         }
       s3_wheel_path: pytorch/whl
     secrets:
