--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,9 @@ if(Python3_EXECUTABLE)
     )
 endif()
 
-find_package(Torch 1.11 REQUIRED PATHS ${torch_cmake_prefix_path})
+find_package(Threads REQUIRED)
+
+find_package(Torch 1.13 REQUIRED PATHS ${torch_cmake_prefix_path})
 
 # ------------------------------------------------------------
 # Targets
